Fixed some widths

--- a/src/components/Services/ServicesTypes.astro
+++ b/src/components/Services/ServicesTypes.astro
@@ -4,7 +4,7 @@ const { servicesType } = Astro.props;
 import "../../styles/styles.scss";
 ---
 
-<div class="service container">
+<div class="service">
     <div class="service-grid">
         <section class="portal">
             <div>
