--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -369,7 +369,6 @@
     // Featured Products Section
     .featured-products {
         margin-top: calc(9rem - 25px);
-        max-width: 1920px;
 
         .featured-header-grid {
             display: grid;
@@ -463,7 +462,6 @@
     // About Us Section
     .about-section {
         margin: calc(9rem - 25px) 0 9rem 0;
-        max-width: 1920px;
 
         .about-header-grid {
             display: grid;
@@ -486,8 +484,8 @@
                 grid-template-columns: repeat(10, 1fr);
                 gap: 20px;
                 align-items: center;
-                max-width: unset;
-                padding: 5rem 0 5rem 0;
+                max-width: 1920px;
+                padding: 5rem 0;
 
                 .about-flex {
                     grid-column: 2 / span 4;
