--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -5,12 +5,10 @@ import Head from "../layouts/Head.astro";
 import Layout from "../layouts/Layout.astro";
 import fetchApi from "../lib/strapi";
 
-
-
 const pages = await fetchApi({
-  endpoint: 'contact-uses', 
-  page: 'ContactUsPage',
-  wrappedByKey: 'data',
+  endpoint: "contact-uses",
+  page: "ContactUsPage",
+  wrappedByKey: "data",
 });
 
 // http://localhost:1337/api/contact-uses?populate[ContactUsPage][populate]=*
@@ -18,18 +16,24 @@ const pages = await fetchApi({
 const contactusPage = pages[0];
 const pageData = contactusPage?.ContactUsPage || [];
 
-const heroData = pageData.find(pd => pd.__component === "contactushero.contactus-hero") || {};
+const heroData =
+  pageData.find((pd) => pd.__component === "contactushero.contactus-hero") ||
+  {};
 
-const contactusFormData = pageData.find(pd => pd.__component === "contactusform.contactus-form") || {};
+const contactusFormData =
+  pageData.find((pd) => pd.__component === "contactusform.contactus-form") ||
+  {};
 
-const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
+const seoPageData =
+  pageData.find((pd) => pd.__component === "shared.seo") || {};
 ---
+
 <Head seoData={seoPageData} />
 <Layout>
-   <div class="background-form">
+  <div class="background-form">
     <div class="forms-page-wrapper">
-        <Hero contactUsHero={heroData} />
-        <ContactUsForm formDetails={contactusFormData} />
-      </div>
+      <Hero contactUsHero={heroData} />
+      <ContactUsForm formDetails={contactusFormData} />
     </div>
+  </div>
 </Layout>
