--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -172,6 +172,8 @@
             grid-template-columns: repeat(12, 1fr);
             gap: 20px;
             padding: 5rem 0;
+            max-width: 1920px;
+            margin: 0 auto;
 
             section {
                 display: grid;
