--- a/src/styles/_featured-products.scss
+++ b/src/styles/_featured-products.scss
@@ -144,7 +144,6 @@
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
     margin: 0 auto;
-    max-width: 1920px;
 
     a {
       font-size: 1rem;
@@ -163,6 +162,7 @@
       margin-bottom: 9rem;
       align-items: center;
       padding: unset;
+      max-width: 1920px;
 
       .product-hero-container {
         grid-column: 2 / span 4;
@@ -191,6 +191,7 @@
       grid-template-columns: repeat(12, 1fr);
       gap: 20px;
       grid-column: span 12;
+      margin-top: calc(9rem - 25px);
 
       .yellow-header {
         display: grid;
@@ -251,9 +252,9 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
-    margin-bottom: 9rem;
     padding: 3rem 0;
     max-width: 1920px;
+    margin: 0 auto;
   }
 
   .featured-products-info {
