Fixed individual product max width and product page form label button responsiveness.

--- a/src/styles/_products-page.scss
+++ b/src/styles/_products-page.scss
@@ -350,3 +350,13 @@
         }
     }
 }
+
+@media (min-width: 2350px) {
+  .products-container {
+    section:nth-child(3) {
+      a {
+        padding: 1rem 0;
+      }
+    }
+  }
+}
