--- a/src/styles/_featured-products.scss
+++ b/src/styles/_featured-products.scss
@@ -18,6 +18,7 @@
     }
   }
 }
+
 .featured-products-hero {
   @include products-hero-card($tertiary-dark-blue);
   padding: 32px 16px;
@@ -143,7 +144,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
-    margin: 0 auto;
+    margin-bottom: 9rem;
 
     a {
       font-size: 1rem;
@@ -159,7 +160,7 @@
       gap: 20px;
       display: grid;
       grid-template-columns: repeat(11, 1fr);
-      margin-bottom: 9rem;
+      margin: 0 auto;
       align-items: center;
       padding: unset;
       max-width: 1920px;
@@ -233,7 +234,7 @@
 
           .list {
             grid-column: 1 / span 3;
-            
+
             a {
               width: unset;
             }
@@ -298,7 +299,8 @@
 
   }
 
-  .pressure-seal-img, .integrated-form-img {
+  .pressure-seal-img,
+  .integrated-form-img {
     grid-template-rows: unset
   }
 
