Fixed lang attribute

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -5,7 +5,7 @@ const metaTitle = seoData?.metaTitle || "Print|ED";
 const keywords = seoData?.keywords || "default, keywords";
 ---
 
-<head lang="en">
+<head>
   <meta charset="utf-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width" />
