--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const logoPageData = await fetchApi({
   wrappedByKey: 'data',
 });
 ---
-<html>
+<html lang="en">
     <body>
         <Nav logo={logoPageData[0]} />
         <main>
