Added button title for nav

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -16,7 +16,7 @@ const { logo } = Astro.props;
       <a href="/"
         ><img src={logo.NavLogo.url} alt={logo.NavLogo.alternativeText} /></a
       >
-      <button class="toggle-nav">
+      <button class="toggle-nav" title="Navigation Button">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
           ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
             id="SVGRepo_tracerCarrier"
