fixed head section for html validation. added astro actions back for forms validation

--- a/.vercel/output/functions/_render.func/src/pages/about-us.astro
+++ b/.vercel/output/functions/_render.func/src/pages/about-us.astro
@@ -23,8 +23,9 @@ const aboutusWhyData = pageData.find(pd => pd.__component === "aboutuswhy.about-
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
+<Head seoData={seoPageData} />
 
-<Layout seo={seoPageData}>
+<Layout>
     <Hero aboutUsHero={heroData} />
     <AboutUsWhy aboutUs={aboutusWhyData} />
 </Layout>
