--- a/.vercel/output/functions/_render.func/src/pages/contact-us.astro
+++ b/.vercel/output/functions/_render.func/src/pages/contact-us.astro
@@ -28,7 +28,8 @@ const seoPageData =
   pageData.find((pd) => pd.__component === "shared.seo") || {};
 ---
 
-<Layout seo={seoPageData}>
+<Head seoData={seoPageData} />
+<Layout>
   <div class="background-form">
     <div class="forms-page-wrapper">
       <Hero contactUsHero={heroData} />
