--- a/.vercel/output/functions/_render.func/src/pages/pressure-seal-forms.astro
+++ b/.vercel/output/functions/_render.func/src/pages/pressure-seal-forms.astro
@@ -27,7 +27,8 @@ const securefoldData = pageData.find(pd => pd.__component === "securefold.secure
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-<Layout seo={seoPageData}>
+<Head seoData={seoPageData} />
+<Layout>
     <Hero pressureSealHero={heroData} />
     <WhatIs productWhatIs={pressuresealWhatIsData}/>
     <SecureFold productSecureFold={securefoldData} />
