--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -23,8 +23,8 @@ const aboutusWhyData = pageData.find(pd => pd.__component === "aboutuswhy.about-
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-
-<Layout seo={seoPageData}>
+<Head seo={seoPageData}/>
+<Layout>
     <Hero aboutUsHero={heroData} />
     <AboutUsWhy aboutUs={aboutusWhyData} />
 </Layout>
