--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,8 @@ const aboutData = pageData.find(pd => pd.__component === "about.about") || {};
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-<Layout seo={seoPageData}>
+<Head seo={seoPageData}/>
+<Layout>
 	<Hero homeHero={heroData}  />
 	<HighQuality homeHighQuality={highQualityData}  />
 	<FeaturedProducts homeFeaturedProducts={featuredProductsData} />
