--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -35,7 +35,8 @@ const initialCount = 4;
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-<Layout seo={seoPageData}>
+<Head seo={seoPageData}/>
+<Layout>
 
     <ProductsHero productsHero={heroData} />
 
