--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -27,8 +27,7 @@ const contactusFormData =
 const seoPageData =
   pageData.find((pd) => pd.__component === "shared.seo") || {};
 ---
-<Head seo={seoPageData}/>
-<Layout>
+<Layout seo={seoPageData} >
   <div class="background-form">
     <div class="forms-page-wrapper">
       <Hero contactUsHero={heroData} />
