--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,7 @@ const aboutData = pageData.find(pd => pd.__component === "about.about") || {};
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-<Head seo={seoPageData}/>
-<Layout>
+<Layout seo={seoPageData} >
 	<Hero homeHero={heroData}  />
 	<HighQuality homeHighQuality={highQualityData}  />
 	<FeaturedProducts homeFeaturedProducts={featuredProductsData} />
