--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -35,8 +35,7 @@ const initialCount = 4;
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-<Head seo={seoPageData}/>
-<Layout>
+<Layout seo={seoPageData} >
 
     <ProductsHero productsHero={heroData} />
 
