--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -83,9 +83,9 @@ const { formDetails } = Astro.props;
             </div>
         </div>
         <div>
-            <label class="label-upload" for={formDetails.FileUpload}>{formDetails.FileUpload}</label>
+            <label class="label-upload" for="label-upload">{formDetails.FileUpload}</label>
             <input
-                id=label-upload
+                id="label-upload"
                 class="file-upload"
                 type="file"
                 name="attachment"
