--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -34,11 +34,12 @@
 
 .service {
     background-color: $tertiary-dark-blue;
+    padding: 0 1rem;
 
     .service-grid {
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 2rem;;
         color: $white;
         margin: 6rem 0 6rem 0;
 
