--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -250,4 +250,15 @@ option{
     .form-h1 {
         border-radius: 15px;
     }
+    // .large-grid {
+        // display: grid;
+        // grid-template-columns: repeat(12, 1fr);
+    // }
+    // .large-grid > :first-child {
+    //     grid-column: 1/ span 4;
+    // }
+    // .contact-card{
+        // grid-column: 5 / span 7
+    // }
+   
 }
