Added promo link in nav and max width in footer logo

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -45,6 +45,7 @@ const { logo } = Astro.props;
           <li><a href="/online-services">Online Services</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
           <li><a href="/about-us">About Us</a></li>
+          <li><a href="https://printedonline.espwebsite.com/" target="_blank">Promo Products</a></li>
         </ul>
       </nav>
       <a href="/request-quote" class="request">Request Quote</a>
