--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -13,7 +13,8 @@ header {
         background-color: $primary-blue;
         padding: 6px 0;
 
-        a, span {
+        a,
+        span {
             font-size: 16px;
             text-decoration: none;
             color: $white;
@@ -65,7 +66,7 @@ header {
 
                 a:hover {
                     background-color: $secondary-yellow;
-                    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out; 
+                    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
                 }
             }
         }
@@ -103,7 +104,8 @@ header {
         position: unset;
 
         .top-nav {
-            a, span {
+            a,
+            span {
                 font-size: 20px;
             }
         }
@@ -136,16 +138,16 @@ header {
 
             ul {
                 display: flex;
-                flex-flow: nowrap;
+                flex-wrap: wrap;
 
                 li {
                     border-bottom: none;
-    
+                    line-height: 65px;
 
                     a {
                         display: inline;
                         white-space: nowrap;
-                        padding: 1rem 1rem;
+                        padding: 1rem 1rem; 
                     }
 
                     a:hover {
