--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -88,18 +88,17 @@ header {
 }
 
 .call-btn{
-  
     position: fixed;
     z-index: 1;
-    top:  90%;
-    right: 10px;
+    top: 88%;
+    right: 40px;
     background-color: $secondary-yellow;
-    padding: 1.2rem;
+    padding: 21px;
     border-radius: 50%;
     text-decoration: none;
     color: $tertiary-dark-blue;
-       
-    
+    width: 75px;
+    height: 75px;
 }
 
 
