--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -87,13 +87,13 @@ header {
     }
 }
 
-.call-btn{
+.call-btn {
     position: fixed;
     z-index: 1;
-    top: 88%;
-    right: 40px;
+    bottom: 25px;
+    right: 25px;
     background-color: $secondary-yellow;
-    padding: 21px;
+    padding: 20px;
     border-radius: 50%;
     text-decoration: none;
     color: $tertiary-dark-blue;
