Added aria labels for accessiblity for external links

--- a/src/components/HomePage/Hero.astro
+++ b/src/components/HomePage/Hero.astro
@@ -27,7 +27,7 @@ import "../../styles/styles.scss";
             <div class="promo-card">
                 <h2><img src="/assets/promo-icon.svg" alt="Pen icon for promotional products">{homeHero.promoProductsHeader}</h2>
                 <p>{homeHero.promoProductsText}</p>
-                <a href="https://printedonline.espwebsite.com/" target="_blank">{homeHero.promoProductsBtn}</a>
+                <a href="https://printedonline.espwebsite.com/" target="_blank" aria-label="Visit our promotional products website.">{homeHero.promoProductsBtn}</a>
             </div>
         </div>
     </div>
