--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -6,9 +6,9 @@ const { logo } = Astro.props;
 <header>
   <div class="top-nav">
     <div class="container">
-      <a href="tel:780-906-9959">780-906-9959</a>
+      <a href="tel:780-906-9959" aria-label="Call us for more information.">780-906-9959</a>
       <span>|</span>
-      <a href="mailto:info@printedonline.ca">info@printedonline.ca</a>
+      <a href="mailto:info@printedonline.ca" aria-label="Email us for more information.">info@printedonline.ca</a>
     </div>
   </div>
   <div class="container">
@@ -45,14 +45,14 @@ const { logo } = Astro.props;
           <li><a href="/online-services">Online Services</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
           <li><a href="/about-us">About Us</a></li>
-          <li><a href="https://printedonline.espwebsite.com/" target="_blank">Promo Products</a></li>
+          <li><a href="https://printedonline.espwebsite.com/" target="_blank" aria-label="Visit our promotional products website.">Promo Products</a></li>
         </ul>
       </nav>
       <a href="/request-quote" class="request">Request Quote</a>
     </div>
   </div>
  
-  <a href="tel:780-906-9959" class="call-btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="call-btn-svg" width="35px">
+  <a href="tel:780-906-9959" class="call-btn" aria-label="Call us for more information."><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="call-btn-svg" width="35px">
   <path fill-rule="evenodd" d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z" clip-rule="evenodd" />
 </svg></a>
 
