--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,9 +3,13 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <div class="container-four">
-    <h1 class="h1-four">404</h1>
-    <p>Oops! Page could not be found.</p>
-    <a href="/" class="btn-four"> Back to Home </a>
+  <div class="four-background">
+    <div class="container-four">
+      <div class="text-section">
+        <h1 class="h1-four">404</h1>
+        <p>Oops! Page could not be found.</p>
+        <a href="/" class="btn-four"> Back to Home </a>
+      </div>
+    </div>
   </div>
 </Layout>
