Fixed email type for forms

--- a/src/components/ContactUs/ContactUsForm.astro
+++ b/src/components/ContactUs/ContactUsForm.astro
@@ -34,7 +34,7 @@ const { formDetails } = Astro.props;
             >
             <input
                 id="phone"
-                type="text"
+                type="tel"
                 name="phone"
                 placeholder="Enter your phone number here."
             />
