--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -30,7 +30,7 @@ const { formDetails } = Astro.props;
             <label for="phone">{formDetails.Phone} <span class="form-symbol">*</span></label>
             <input
                 id="phone"
-                type="text"
+                type="tel"
                 name="phone"
                 placeholder="Enter your phone number here."
             />
