Fixed mobile nav font size

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -57,6 +57,7 @@ header {
                     text-decoration: none;
                     text-transform: uppercase;
                     display: block;
+                    font-size: 20px;
                     font-weight: 600;
                     color: $tertiary-dark-blue;
                     height: 100%;
