--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -35,7 +35,7 @@ const { logo } = Astro.props;
           <ul class="footer-products">
             <li><a href="/linerless-labels">Linerless Labels</a></li>
             <li><a href="/pressure-seal-forms">Pressure Seal Forms</a></li>
-            <li><a href="/integrated-form-labels">Integrated Label/Form Combination</a></li>
+            <li><a href="/integrated-form-labels">Integrated Form/Label Combination</a></li>
           </ul>
         </div>
       </div>
