--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -9,7 +9,7 @@ const { formDetails } = Astro.props;
         <p>Input fields that are marked with <span class="form-symbol">*</span> are required. </p>
      </div>
     <form
-        action="https://formsubmit.co/rikuo.wada@gmail.com"
+        action="https://formsubmit.co/info@printedonline.ca"
         method="POST"
         name="requestquote"
         enctype="multipart/form-data"
