Added new form submissions

--- a/src/components/ContactUs/ContactUsForm.astro
+++ b/src/components/ContactUs/ContactUsForm.astro
@@ -10,11 +10,10 @@ const { formDetails } = Astro.props;
         </p>
     </div>
     <form
-        action="https://formsubmit.co/info@printedonline.ca"
+        action="https://formcarry.com/s/V-s3XGWxWo9"
         method="POST"
         name="contactus"
     >
-        <input type="hidden" name="_template" value="table" />
         <div>
             <label for="name"
                 >{formDetails.FullName}
