--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -9,13 +9,11 @@ const { formDetails } = Astro.props;
         <p>Input fields that are marked with <span class="form-symbol">*</span> are required. </p>
      </div>
     <form
-        action="https://formsubmit.co/info@printedonline.ca"
+        action="https://formcarry.com/s/gluh9QOqPJx"
         method="POST"
         name="requestquote"
         enctype="multipart/form-data"
     >
-    <!-- Template type -->
-    <input type="hidden" name="_template" value="table">
         <div>
             <label for="name">{formDetails.FullName} <span class="form-symbol">*</span></label>
             <input
